2019-11-10  Karl Berry  <karl@tug.org>

	* lists-translations.txt (\~a, \PNG, \SVG, \ldots): new for tb126.
	* tb126capsule.txt: new.
	* tb125capsule.txt: public.

2019-10-14  Karl Berry  <karl@tug.org>

	* Makefile (unparsed): look for Dash, accept ~ross.
	* capaccum.pl (accumulation_check) <@category_expected>: add TUG 2019.
	* lists-unifications.txt: add TUG 2019, Anana, Asakura, ... Rishi
	for tb125.
	* tb124capsule.txt: now public.
	* tb125capsule.txt: new issue.
	
	* tb16capsule.txt: \TeX\Dash -> \TeX{}\Dash.
	* capout.pl (write_issue): maybe better for "by" to be outside link.

2019-10-02  Karl Berry  <karl@tug.org>

	* tb14capsule.txt (c1): new item.
	
	* tb06capsule.txt (tb06software): describe memory chart.

2019-08-10  Karl Berry  <karl@freefriends.org>

	* caputil.pl (cap_html_header): #include /header.html.

2019-05-17  Karl Berry  <karl@tug.org>

	* capout.pl (write_issue): list* links must be
	absolute as /TUGboat/Contents/list*.html, else
	accessing from, e.g., tug.org/TUGboat/40-1/ fails.

	* tb124 released, tb123 public.

2019-05-17  Karl Berry  <karl@freefriends.org>

	* lists-unifications.txt (Fahmy): add initials.
	
	* tb18capsule.txt (Koren): page 101.

2019-01-26  Karl Berry  <karl@freefriends.org>

	* capin.pl (parse_one_capsule): check for pageno not a range.
	* many capsule files: add ranges, as with
	perl -pi -e 's/\{1\}$/{1-1}/' tb01capsule.txt 

2019-01-18  Karl Berry  <karl@freefriends.org>

	* capdata-rx.pl (lists_regexps): count regexps used.
	(rx_dump_count): output unused regexps.
	* capaccum.pl (accumulation_check): call it.
	* lists-regexps.txt: remove unused, and used only once.
	* tb{85,105,119}capsule.txt: regularize usage.

2019-01-17  Karl Berry  <karl@freefriends.org>

	* capdata-unify.pl (lists_unify): count unifications used.
	(unify_dump_count): output unused unifications.
	* capaccum.pl (accumulation_check): call it.
	* lists-unifications.txt: remove unused unifications.

2019-01-13  Karl Berry  <karl@freefriends.org>
