@@ -19,8 +19,10 @@ sub output_author_list {
 
   my $listfile = ">list$what.html";
   open (my $fh, $listfile) || die "open($listfile.html) failed: $!";
-  print $fh &cap_html_header ("TUGboat Author list");
-  print $fh $list_hdr_common;
+  my $title = "TUGboat Author/People list";
+  print $fh &cap_html_header ($title);
+  (my $header = $list_hdr_common) =~ s/%h2text%/$title/;
+  print $fh $header;
   
   print $fh <<END_HEADER;
 <a href="listkeyword.html">Category/Keyword</a> or
